# coderip

./: .gitignore  README.md  pyproject.toml
coderip/: config.py  main.py  models.py  monitor.py  openai_client.py  tagfinder.py  user_interface.py
