[tool.poetry]
name = "coderip"
version = "0.1.0"
description = ""
authors = ["Richard Abrich <richard.abrich@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
watchdog = "^3.0.0"
psutil = "^5.9.6"
openai = "^1.3.5"
loguru = "^0.7.2"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
